# Delft3D-Python-Thesis

./: .gitignore  AnalysisCumulative.ipynb  CleanNetCDF.ipynb  ColorMaps.ipynb  CompareMultipleRuns.ipynb  DaskMultipleNetCDFs.ipynb  Delft3D_NetCDF_Output_overview.md  Delft3D_to_PyVista_Approach.md  FancyPlotErosionDepoProfile.ipynb  GenerateBCRecords.ipynb  GenerateBCRecordsImproved.ipynb  GenerateDepthAndGridFile.ipynb  GenerateMultipleFlowMDFs.ipynb  GenerateMultipleFlows.ipynb  GenerateMultipleFlowsReplenishment.ipynb  GenerateReplenishmentMultipleFlows.ipynb  HoloViews.ipynb  LICENSE  LastTimestepEachRun.ipynb  MakeAnimations.ipynb  Multirun.md  NSection_mpl.ipynb  OLD_PyVista.ipynb  Pipfile  PlotAnimationsSingleRun.ipynb  PlotMultipleRuns_HoloViews.ipynb  PlotNSection_mpl.ipynb  PlotResults.ipynb  PlotScenarioSlopes.ipynb  PlotSigmaLayerSingleRun_hvPlot.ipynb  PlotUnderlayers_mpl.ipynb  PlotVectorField.ipynb  PlotVerticalProfile.ipynb  ProcessAndWriteNetCDF.ipynb  ProcessNetCDF.ipynb  PyVistaBottomProps.ipynb  PyVistaMultirunDeposits.ipynb  PyVistaScaledDeposits.ipynb  PyVistaStructuredGrid.ipynb  PyVistaTimeWidget.ipynb  (+13 more)
JulesD3D/: D3DModel.py  DepthModel.py  Discharge3Dprofile.py  SedMor.py  SlopeBreak.py  TimeSeries.py  bct.py  bnd.py  bndDemo.py  cleanNetCDF.py  dep.py  enc.py  grid.py  mdf.py  mor.py  multipleruns.py  multiplerunsreplenish.py  plot2D.py  plotPyVista.py  processNetCDF.py  processing_2d.py  sed.py  utils.py  writeBC.py
output_material/: testdensityscene.vtkjs
